--- a/weather/src/index.css
+++ b/weather/src/index.css
@@ -1,20 +1,19 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: Josefin Sans;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: url(./img/bg.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
 
-  background: rgb(107,112,113);
-background: linear-gradient(319deg, rgba(107,112,113,1) 0%, rgba(27,27,28,1) 100%);
 }
 
 .App{
   height: 100vh;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.cardWeather {
+  background-color: white;
+  border-radius: 30px;
 }
