--- a/weather/src/index.css
+++ b/weather/src/index.css
@@ -16,7 +16,10 @@ body {
 .cardWeather {
   background-color: white;
   border-radius: 30px;
+  box-shadow: 10px 10px 10px lightgray;
+  cursor: pointer;
 }
+
 
 .description {
     text-transform: uppercase;
